# SonicTheHedgehog

./: .clangd  .gitignore  CMakeLIsts.txt  README.md
Application/: CMakeLists.txt  TODO.txt  main.cpp
Application/Assets/: grid.csv
Application/Game/: GameStats.cpp  GameStats.h  HUD.cpp  HUD.h
Application/Scenes/: CreditsScene.cpp  CreditsScene.h  GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h  SceneManager.cpp  SceneManager.h  SceneType.h  TunnelPaths.h
Application/Sprites/: BasicSprite.cpp  BasicSprite.h  Bridge.cpp  Bridge.h  Checkpoint.cpp  Checkpoint.h  CrabBullet.cpp  CrabBullet.h  Crabmeat.cpp  Crabmeat.h  FinalRing.cpp  FinalRing.h  Flower.cpp  Flower.h  Masher.cpp  Masher.h  Ring.cpp  Ring.h  ScatteredRing.cpp  ScatteredRing.h
Application/Utilities/: DrawHelpers.cpp  DrawHelpers.h  FilmParser.cpp  FilmParser.h  MenuConstants.h  MoverUtilities.cpp  MoverUtilities.h
Application/prompts/: step3_sprites_animations.md
Engine/: CMakeLists.txt
Engine/Animations/: Animation.cpp  Animation.h  AnimationFilm.cpp  AnimationFilm.h  AnimationFilmHolder.cpp  AnimationFilmHolder.h  Animator.cpp  Animator.h  AnimatorManager.cpp  AnimatorManager.h  FlashAnimation.cpp  FlashAnimation.h  FlashAnimator.cpp  FlashAnimator.h  FrameListAnimation.cpp  FrameListAnimation.h  FrameListAnimator.cpp  FrameListAnimator.h  FrameRangeAnimation.cpp  FrameRangeAnimation.h  FrameRangeAnimator.cpp  FrameRangeAnimator.h  MovingAnimation.cpp  MovingAnimation.h  MovingAnimator.cpp  MovingAnimator.h  MovingPathAnimation.cpp  MovingPathAnimation.h  MovingPathAnimator.cpp  MovingPathAnimator.h  ScrollAnimation.cpp  ScrollAnimation.h  ScrollAnimator.cpp  ScrollAnimator.h  TickAnimation.cpp  TickAnimation.h  TickAnimator.cpp  TickAnimator.h  TunnelPath.h  TunnelPathAnimator.cpp  (+1 more)
Engine/Core/: Context.cpp  Context.h  EventRegistry.cpp  Game.cpp  (+8 more)
(+40 files in other folders)
